kubernetes/doc-home-cluster/infrastructure/flux-system/add-ons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.bjw-s.dev
spec:
  className: "internal-nginx"
  rules:
    - host: &host "flux-receiver-cluster-0.bjw-s.dev"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
